styles.css
/* ... */
/* General body styles */
body {
  font-family: "Open Sans", sans-serif;
  /* background: linear-gradient(to bottom, var(--primary-bg), var(--secondary-bg)); */
  color: var(--text-color); /* Default text color */
  min-height: 100dvh;
  min-width: 100vw;
  background-image: url("./assets/images/bgTileBlue.png");
  background-repeat: repeat;
  /* backdrop-filter: brightness(0.9); */
  background-size: 50vw auto;
  /* display: grid; */
  /* grid-template-rows: auto 1fr auto; */
  /* flex: 1 1 auto; */
  /* border: solid 5px red; */
  /* overflow-x: hidden; */
  /* display: flex; */
  /* flex-direction: column; */
  /* justify-content: center; */
}

.home-screen {
  display: grid;
  grid-template-rows: auto 1fr auto;
  min-height: 100dvh;
  max-width: 100%;
  align-items: center;
}

.kodokan-screen {
  display: grid;
  grid-template-rows: auto 1fr auto auto;
  min-height: 100dvh;
  max-width: 100%;
  align-items: center;
}

.kodokan-grid {
  display: grid;
  grid-template-columns: auto 1fr;
}

.helper-container {
  grid-column: 1/1;
  /* max-height: max-content%; */
  /* width: auto; */
  background-color: red;
}

.header {
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  align-items: center;
  /* padding: 1rem 2rem; */
  background-color: #a71916;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  width: 100%;
}

.character-slot {
  height: 20px;
  background-color: #e8d9c3;
  opacity: 0.5;
}

.logo-container {
  display: flex;
  justify-content: center;
}

.logo {
  height: 5dvh;
}

.game-mode-grid {
  display: grid;
  grid-template-columns: auto minmax(200px, 15%);
  gap: 1rem 0;
  padding: 1rem;
  flex: 1 1 auto;
  min-height: 85%;
  /* border: 5px red solid; */
}

.game-tile {
  background: rgba(107, 107, 107, 0.5);
  /* border: 2px solid #000000; */
  border-radius: 8px 0 0 8px;
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  grid-column: 1;
  flex: 1 1 auto;
  color: #fff;
  text-decoration: none;
  margin: 1vh 0;;
  /* z-index: -10; */
}

.game-tile:hover {
  background: #880000;
  color: #fff;
  scale: var(--button-scale);
  transition: scale var(--scale-duration) ease-in-out;
}

.tile-content h2 {
  /* border: 2px dashed #a71916; */
  padding-left: 1rem;
}

.homeHelperContainer {
  background: var(--secondary-bg);
  border: 2px solid var(--secondary-bg);
  border-radius: 4px 12px 12px 4px;
  /* border-radius: 12px; */
  /* padding: 1rem; */
  text-align: center;
  grid-row: 1/5;
  grid-column: 2;
  z-index: 2;
}

.homeHelperContainer img {
  width: 100%;
  /* max-width: 300px; */
  height: auto;
  /* aspect-ratio: 1 / 1; */
  border-radius: 4px;
}

@media (orientation: portrait) {
  .card-of-day {
    display: none;
  }
}

.card-preview {
  margin-top: 1rem;
  height: 150px;
  background: #fff;
  border: 1px solid #ccc;
}

.locationTileContainer {
  padding: 10px;
  display: inline-flex;
  gap: 2vw;
  flex: 1 1 auto;
  list-style-type: none;
  border: solid 5px red;
}

.locationTile {
  max-width: 100%;
  max-height: 36vh;
  width: auto;
  aspect-ratio: 1 / 1;
  border-radius: 1rem;
  flex: 1 1 auto;
  object-fit: contain;
  align-items: center;
}

.locationTileSmall {
  border-radius: 1rem;
  display: flex;
  flex: 1 1 auto;
  /* object-fit: contain;  */
  /* border: solid 5px red; */
  /* border: 2px dashed #a71916; */
  max-width: 10vh;
}

.locationTileSmall img {
  max-width: 10vh;
  height: auto;
  aspect-ratio: 1 / 1;
  border-radius: 1rem;
  flex: 1 1 auto;
}

.svgTile {
  aspect-ratio: 1 / 1;
  display: flex;
  justify-content: center;
  align-items: center;
  /* max-width: 20px; */
  /* flex: 1 1 auto; */
  /* border: red solid 2px; */
}
svg {
  width: 10vh;
  aspect-ratio: 1 / 1;
  /* border: red solid 2px; */
  /* fill: #e1e1e1; */
  fill: #ffffff;
}

/* Button styles */
button {
  font-size: 1rem;
  background: none; /* Remove default button background */
  border: none; /* Remove default button border */
  color: #fff; /* Match the text color of navbar links */
  font-weight: bold; /* Match the font weight of navbar links */
  text-decoration: none; /* Remove underline */
  cursor: pointer; /* Change cursor to pointer */
  padding: 0; /* Remove default padding */
}

button:hover {
  text-decoration: underline; /* Add underline on hover */
}

button:focus {
  outline: none; /* Remove default focus outline */
  text-decoration: underline; /* Add underline for focus */
}

/* Optional: Hide spinner by default with the hidden class */
.hidden {
  display: none;
}

#gameArea {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem;
  backdrop-filter: blur(10px);
}

/* Card styles */
.card-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: var(--padding-large);
  background-color: seagreen;
  min-height: 500px;
}

.judoka-card {
  position: relative; /* Ensure the pseudo-element is positioned relative to the card */
  width: 300px;
  aspect-ratio: 2 / 3; /* Maintain aspect ratio */
  border: max(13px, 1dvh) solid var(--card-border-color);
  border-radius: var(--border-radius-large); /* Rounded corners */
  background-color: var(--card-bg-color); /* Card background color */
  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3); /* Add shadow */
  overflow: hidden; /* Ensure the pseudo-element stays within the card */
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  transition:
    box-shadow 0.2s ease-in-out,
    transform 0.1s ease-in-out;
}
/* ... */

